<resources>
    <string name="app_name">pizzeria</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="register_button_text">Registrar</string>
    <string name="login_button_text">Login</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrar</string>
    <string name="registration_title">Registro de usuarios</string>
    <string name="name_hint">Nombre</string>
    <string name="title">Escoge tu pizza</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="price_format">%.2f</string>
</resources>